// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputGroup tests should render InputGroup as textarea 1`] = `
<DocumentFragment>
  .c3 {
  border: none;
  background-color: #F6F6F6;
  min-height: 9.375rem;
  max-height: 31.25rem;
  min-width: 100%;
  max-width: 100%;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  font-weight: 400;
  width: 100%;
  padding: 1rem;
  color: #000000;
}

.c3::placeholder {
  color: #757575;
}

.c3:focus {
  outline: 2px solid #000000;
}

.c1 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: roboto;
  font-weight: 500;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #000000;
}

.c2 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: roboto;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #757575;
}

.c0 {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 0.5rem;
}

<div
    class=""
    data-testid="input-group-container"
  >
    <div
      class="c0"
    >
      <p
        class="c1"
        data-testid="input-group-title"
        font-family="roboto"
        font-weight="500"
      >
        Feature Key
      </p>
      <p
        class="c2"
        data-testid="input-group-label"
        font-family="roboto"
      />
    </div>
    <textarea
      class="c3"
      data-testid="textarea"
      name=""
      placeholder="Description"
    />
  </div>
</DocumentFragment>
`;

exports[`InputGroup tests should render InputGroup correctly 1`] = `
<DocumentFragment>
  .c3 {
  position: relative;
  display: flex;
  align-items: center;
}

.c4 {
  border: none;
  background-color: #F6F6F6;
  height: 2.75rem;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  font-weight: 400;
  width: 100%;
  padding: 0 1rem;
  color: #000000;
}

.c4::placeholder {
  color: #757575;
}

.c4:focus {
  outline: 2px solid #000000;
}

.c1 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: roboto;
  font-weight: 500;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #000000;
}

.c2 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: roboto;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #757575;
}

.c0 {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 0.5rem;
}

<div
    class=""
    data-testid="input-group-container"
  >
    <div
      class="c0"
    >
      <p
        class="c1"
        data-testid="input-group-title"
        font-family="roboto"
        font-weight="500"
      >
        Feature Key
      </p>
      <p
        class="c2"
        data-testid="input-group-label"
        font-family="roboto"
      />
    </div>
    <div
      class="c3"
      data-testid="input-container"
    >
      <input
        class="c4"
        data-testid="input"
        format="normal"
        name="feature"
        placeholder="E.g. header_size"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputGroup tests should render InputGroup with hint 1`] = `
<DocumentFragment>
  .c3 {
  position: relative;
  display: flex;
  align-items: center;
}

.c4 {
  border: none;
  background-color: #F6F6F6;
  height: 2.75rem;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  font-weight: 400;
  width: 100%;
  padding: 0 1rem;
  color: #000000;
}

.c4::placeholder {
  color: #757575;
}

.c4:focus {
  outline: 2px solid #000000;
}

.c5 {
  display: flex;
  font-size: 0.75rem;
  line-height: 0.875rem;
  font-weight: 400;
  font-family: roboto;
  margin-top: 0.5rem;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #757575;
}

.c1 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: roboto;
  font-weight: 500;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #000000;
}

.c2 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: roboto;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #757575;
}

.c0 {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 0.5rem;
}

<div
    class=""
    data-testid="input-group-container"
  >
    <div
      class="c0"
    >
      <p
        class="c1"
        data-testid="input-group-title"
        font-family="roboto"
        font-weight="500"
      >
        Feature Key
      </p>
      <p
        class="c2"
        data-testid="input-group-label"
        font-family="roboto"
      />
    </div>
    <div
      class="c3"
      data-testid="input-container"
    >
      <input
        class="c4"
        data-testid="input"
        format="normal"
        name="feature"
        placeholder="E.g. header_size"
        type="text"
        value=""
      />
    </div>
    <span
      class="c5"
      color="#757575"
      data-testid="input-group-hint"
      font-family="roboto"
    >
      no special characters
    </span>
  </div>
</DocumentFragment>
`;

exports[`InputGroup tests should render InputGroup with label 1`] = `
<DocumentFragment>
  .c3 {
  position: relative;
  display: flex;
  align-items: center;
}

.c4 {
  border: none;
  background-color: #F6F6F6;
  height: 2.75rem;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  font-weight: 400;
  width: 100%;
  padding: 0 1rem;
  color: #000000;
}

.c4::placeholder {
  color: #757575;
}

.c4:focus {
  outline: 2px solid #000000;
}

.c1 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: roboto;
  font-weight: 500;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #000000;
}

.c2 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: roboto;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #757575;
}

.c0 {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 0.5rem;
}

<div
    class=""
    data-testid="input-group-container"
  >
    <div
      class="c0"
    >
      <p
        class="c1"
        data-testid="input-group-title"
        font-family="roboto"
        font-weight="500"
      >
        Feature Key
      </p>
      <p
        class="c2"
        data-testid="input-group-label"
        font-family="roboto"
      >
        0 / 120
      </p>
    </div>
    <div
      class="c3"
      data-testid="input-container"
    >
      <input
        class="c4"
        data-testid="input"
        format="normal"
        name="feature"
        placeholder="E.g. header_size"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;
